fixed main content title being clipped by SWAPR bar

--- a/app/styles/partials/_main.scss
+++ b/app/styles/partials/_main.scss
@@ -1,6 +1,7 @@
 #main {
   @include container;
   margin-left: 222px;
+  padding-top: 47px;
 
   .title {
     @include container-header($peter-river);
